# LFTC-Compiler

./: .gitignore  CMakeLists.txt  README.md  main.c
AD/: CMakeLists.txt
AD/include/: ad.h
AD/src/: ad.c
AD/validation/: testad.c
ADSR/: CMakeLists.txt  rules.ipynb
ADSR/src/: parser.c
ADSR/validation/tests/: testparser.c
ALEX/: .gitignore  CMakeLists.txt
ALEX/include/: lexer.h  utils.h
ALEX/src/: lexer.c  main.c  utils.c
ALEX/validation/: main.c
AT/: CMakeLists.txt
AT/include/: at.h
AT/src/: at.c
AT/validation/: testat.c
GC/: CMakeLists.txt
GC/include/: gc.h
GC/src/: gc.c
GC/validation/: simplegc.c  testgc.c
VM/: CMakeLists.txt
VM/include/: vm.h
VM/src/: vm.c
